# lotus-petal

./: .gitignore  README.md  __init__.py  check_duplicate_methods.py  config.py  fix_typing.py  import_terms.py  main.py  pyproject.toml  requirements.txt  sync_database.py  使用指南.txt  备份.py  数据库表的用途和在系统中使用的位置.txt  术语表.xlsx  项目结构及说明.txt
postprocessor/: __init__.py  adapter.py  grammar_corrector.py  quality_controller.py  term_restorer.py  text_finalizer.py
preprocessor/: __init__.py  botok_analyzer.py  context_extractor.py  term_protector.py
translator/: __init__.py  nllb_wrapper.py  translation_manager.py
utils/: __init__.py  concept relation_extractor.py  concept_relation_manager.py  helpers.py  label_manager.py  term_database.py
临时文件/: check_terms.py
旧设计/: 参数推荐存储形式.txt  后续检查的功能.txt  完整功能调整对照表.docx  架构详细方法说明.txt  架构说明.txt  藏文翻译系统优化架构 v2 v3.txt
旧设计/各类完整设计/: MT5分析器完整设计.txt  NLLB翻译引擎完整设计.txt  TiBERT分析器完整设计.txt  辅助类设计.txt
旧设计/数据库与数据导入/: NLLB训练数据准备示例.txt  text_analysis数据示例.txt  句子边界规则表数据准备.txt  导入时的数据预处理.txt  数据库.txt  补充的训练数据表.txt
旧设计/训练相关/: MT5语义角色训练可行性评估.txt  训练后的架构调整.txt  训练相关.txt
